# price_scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: update-prices.yml
myenv/: pyvenv.cfg
src/: app.py  check_prices.py  database.py  scraper.py
