[tool.poetry]
name = "price-scrap"
version = "0.1.0"
description = ""
authors = ["whiteyod"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.50.0"
firecrawl-py = "^4.5.0"
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.1.1"
pandas = "^2.3.3"
plotly = "^6.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
